# bookworm

./: README.md  package.json
src/: App.tsx  styles.css  styles.scss
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: browser.rs  crud.rs  main.rs
src/components/: Dashboard.scss  Dashboard.tsx
src/components/Header/: Header.scss  Header.tsx
src/components/Info/: Info.scss  Info.tsx
src/components/ListArea/: ListArea.scss  ListArea.tsx
src/components/ListArea/PageForm/: PageForm.scss  PageForm.tsx  useForm.ts
src/components/Loader/: Loader.tsx
src/models/: IListData.ts  IPageData.ts
